Sat May  1 15:14:26 EDT 2004	JK Lowden <jklowden@schemamania.org>
	* configure.in test for regex.h
	* src/apps/bsqldb.c improve multi-batch handling.
	
Fri Apr 30 16:15:54 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/odbc.c: fixed SQLGetInfo

Wed Apr 28 23:04:30 EDT 2004	JK Lowden <jklowden@schemamania.org>
	* doc/Makefile.am doc/userguide.sgml
	- added links to vendor reference documentation.  
	- s/-L/-h/g: use more standard -h to test for links. 
	
Mon Apr 26 21:00:34 EDT 2004	JK Lowden <jklowden@schemamania.org>
	* src/dblib/unittests/common.h src/dblib/unittests/common.c
	* src/dblib/unittests/t0001.c src/dblib/unittests/t0002.c
	* src/dblib/unittests/t0003.c src/dblib/unittests/t0004.c
	* src/dblib/unittests/t0005.c src/dblib/unittests/t0006.c
	* src/dblib/unittests/t0007.c src/dblib/unittests/t0008.c
	* src/dblib/unittests/t0009.c src/dblib/unittests/t0010.c
	* src/dblib/unittests/t0011.c src/dblib/unittests/t0012.c
	* src/dblib/unittests/t0013.c src/dblib/unittests/t0014.c
	* src/dblib/unittests/t0015.c src/dblib/unittests/t0016.c
	* src/dblib/unittests/t0017.c src/dblib/unittests/t0018.c
	* src/dblib/unittests/t0020.c src/dblib/unittests/t0022.c
	* src/dblib/unittests/t0023.c  src/dblib/unittests/bcp.c
	* src/dblib/unittests/dbmorecmds.c src/dblib/unittests/rpc.c
	- add (optional) command line options to unit tests

Mon Apr 26 19:02:25 EDT 2004	JK Lowden <jklowden@schemamania.org>
	* include/tds.h SYBCHAR is not a nullable type (per se)
	* doc/userguide.sgml ocaml binding reference
	* src/dblib/dblib.c s/sprintf/snprintf/; FIXME--

Mon Apr 26 14:00:45 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/unittests/convert_error.c:
	- cleanup and fix

Sun Apr 25 10:54:11 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* BUGS NEWS TODO: updates
	* src/odbc/unittests/.cvsignore src/odbc/unittests/Makefile.am:
	* src/odbc/unittests/convert_error.c(added):
	- add test from bug #885122
	* src/odbc/unittests/common.c: