@@ -1,7 +1,15 @@
+Sun May 01 09:29:49 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
+	* include/tds_configs.h include/tds_sysdep_private.h:
+	* src/odbc/connectparams.c src/odbc/unittests/common.c:
+	* src/tds/config.c src/tds/threadsafe.c:
+	- fix for path problem with win32 (not yet finished)
+	* src/tds/mem.c: remve memory leak freeing dynamic
+	* src/apps/bsqldb.c: remove a warning
+
 Sat May  1 15:14:26 EDT 2004	JK Lowden <jklowden@schemamania.org>
 	* configure.in test for regex.h
 	* src/apps/bsqldb.c improve multi-batch handling.
-	
+
 Fri Apr 30 16:15:54 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
 	* src/odbc/odbc.c: fixed SQLGetInfo
 
